# MReyeXtract

./: .gitignore  .pylintrc  CONTRIBUTING.md  README.md  format_and_test.sh  pyproject.toml
.github/workflows/: ci.yml  pr-title.yml  release.yml
slurm/: config.yaml  submit.sbatch
src/mreyextract/: __init__.py  cli.py  extract.py  io.py  preprocess.py
tests/: conftest.py  test_cli.py  test_extract.py  test_io.py
